Fixing blog header spacing.

--- a/app/styles/modules/_type.scss
+++ b/app/styles/modules/_type.scss
@@ -6,6 +6,7 @@
     font-weight: 900;
     &.tight {
         letter-spacing: -3px;
+        word-spacing: 5px;
     }
 }
 
